--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "coffee-loader": "^0.7.2"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
+    "deep-diff": "^0.3.3",
     "events": "^1.1.0",
     "flux": "^2.1.1",
     "immutable": "^3.8.1",
+    "immutable-diff": "^0.1.1",
     "jquery": "^2.2.3",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
+    "objects": "^0.3.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "util": "^0.10.3"
