--- a/package.json
+++ b/package.json
@@ -20,28 +20,35 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
+    "coffee-loader": "^0.7.2",
+    "css-loader": "^0.23.1",
     "electron-compilers": "^3.0.0",
     "electron-prebuilt": "^0.37.0",
+    "file-loader": "^0.8.5",
+    "less-loader": "^2.2.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "coffee-loader": "^0.7.2"
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "coffee-script": "^1.10.0",
     "deep-diff": "^0.3.3",
     "events": "^1.1.0",
     "flux": "^2.1.1",
     "immutable": "^3.8.1",
     "immutable-diff": "^0.1.1",
     "jquery": "^2.2.3",
+    "json-loader": "^0.5.4",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
     "objects": "^0.3.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "web3": "^0.15.3"
   }
 }
