fixed web3 update loop; sync status

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "objects": "^0.3.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "titlebar": "^1.4.0",
     "util": "^0.10.3",
     "web3": "^0.15.3"
   }
