--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "body-parser": "^1.15.0",
     "coffee-script": "^1.10.0",
     "deep-diff": "^0.3.3",
     "events": "^1.1.0",
     "expand-home-dir": "0.0.3",
+    "express": "^4.13.4",
     "flux": "^2.1.1",
     "immutable": "^3.8.1",
     "immutable-diff": "^0.1.1",
@@ -47,6 +49,7 @@
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "lodash": "^4.11.1",
+    "net": "^1.0.2",
     "numeral": "^1.5.3",
     "objects": "^0.3.0",
     "react": "^15.0.1",
