--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "body-parser": "^1.15.0",
     "coffee-script": "^1.10.0",
     "deep-diff": "^0.3.3",
+    "electron-reload": "^0.3.0",
     "events": "^1.1.0",
     "expand-home-dir": "0.0.3",
     "express": "^4.13.4",
